--- a/Rangsystem/plugin.yml
+++ b/Rangsystem/plugin.yml
@@ -38,4 +38,4 @@ permissions:
     default: op
   rangsystem.whois:
     description: Erlaubt das Anzeigen von Spielerinformationen
-    default: true
+    default: op
